<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <parent>
    <groupId>io.github.daggerok</groupId>
    <artifactId>tomcat-examples</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <relativePath>../pom.xml</relativePath>
  </parent>
  <modelVersion>4.0.0</modelVersion>
  <artifactId>06-tomee-maven-plugin</artifactId>
  <packaging>war</packaging>
  <properties>
    <java.version>11</java.version>
  </properties>
  <build>
    <finalName>app</finalName>
    <pluginManagement>
      <plugins>
        <plugin>
          <!-- see: https://tomee.apache.org/tomee-maven-plugin.html -->
          <groupId>org.apache.tomee.maven</groupId>
          <artifactId>tomee-maven-plugin</artifactId>
          <version>9.1.1</version>
          <!--<configuration>
            <tomeeClassifier>plume</tomeeClassifier>
            <removeDefaultWebapps>true</removeDefaultWebapps>
          </configuration>-->
          <!--<configuration>
            <tomeeClassifier>plume</tomeeClassifier>
            <args>-Xmx512m -XX:PermSize=256m</args>
            <removeDefaultWebapps>false</removeDefaultWebapps>
          </configuration>-->
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
